Moved to Scala 2.11/Akka 2.3.8 and SBT + new room
* Migrated to SBT
* Set Scala to 2.11 and fixed issues with case classes inheritance
* Set Akka to 2.3.8 (no issues)
* Added new room (ThePit)
* Read the description of a room upon entering

--- a/README
+++ b/README
@@ -8,3 +8,17 @@
                             _-                     (
 
 An experiment in learning Scala using the fun of building a MUD as the learning vehicle.
+
+
+
+
+Running ScalaMUD
+----------------
+
+You need SBT installed, then do:
+
+  sbt run
+
+Then
+
+  telnet localhost 8888
